--- a/app.json
+++ b/app.json
@@ -7,5 +7,7 @@
     }
   },
   "addons": ["redisgreen"],
-  "buildpacks": ["https://github.com/heroku/heroku-buildpack-static.git"]
+  "buildpacks": [
+    { "url": "https://github.com/heroku/heroku-buildpack-static.git" }
+  ]
 }
